--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -2,5 +2,6 @@
         <h1>{{pageTitle}}</h1>
         <p><a href="/">Homepage</a></p>
         <p><a href="/about">About</a></p>
+        <p><a href="/projects">My projects</a></p>
     </header>
     
